--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,3 +31,41 @@ jobs:
         cd infra_project/
         # запустить написанные разработчиком тесты
         python manage.py test
+
+
+  build:
+    runs-on: ubuntu-latest
+    needs: tests # Не выполнять сразу, ждать, пока выполнится tests
+    steps:
+    - name: build docker image
+      run: |
+        # Запуск сборки образа
+        docker build -t rendlolx/infra_workflows:latest .
+
+  push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        # Проверка доступности репозитория Docker Hub для workflow
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        # Вызов сборщика контейнеров docker
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        # Запуск скрипта авторизации на Docker Hub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        # Пуш образа в Docker Hub 
+        uses: docker/build-push-action@v2 
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra_workflows:latest    
+
+  
+       
+        
