Added to .yml settings

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
     - name: build docker image
       run: |
         # Запуск сборки образа
-        docker build -t infra_workflows:latest .
+        docker build -t infra_workflows:latest . --file ../Dockerfile
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
