--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,8 +39,10 @@ jobs:
     steps:
     - name: build docker image
       run: |
+        # Вернемся в папку с Dockerfile
+        cd infra_actions/
         # Запуск сборки образа
-        docker build -t infra_workflows:latest . --file ../Dockerfile
+        docker build -t infra_workflows:latest .
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
