--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,16 +33,7 @@ jobs:
         python manage.py test
 
 
-  build:
-    runs-on: ubuntu-latest
-    needs: tests # Не выполнять сразу, ждать, пока выполнится tests
-    steps:
-    - name: build docker image
-      run: |
-        # Запуск сборки образа
-        docker build -t infra_workflows:latest -f ../../Dockerfile .
-
-  push_to_docker_hub:
+  build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
